<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kerneldc</groupId>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
<!-- 		<version>2.4.5</version> -->
		<version>2.5.6</version>
<!-- 		<version>2.2.5</version> -->
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	
	<artifactId>springboot-multi-project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<java.version>15</java.version>
	</properties>
	<modules>
		<module>common-domain</module>
		<module>csv-file-transfer-rest</module>
		<module>investment-portfolio-domain</module>
		<module>investment-portfolio-batch</module>
	</modules>
	
	<dependencies>
<!-- 		<dependency> -->
<!-- 			<groupId>org.springframework.boot</groupId> -->
<!-- 			<artifactId>spring-boot-starter-security</artifactId> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.springframework.boot</groupId> -->
<!-- 			<artifactId>spring-boot-starter-web</artifactId> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.springframework.boot</groupId> -->
<!-- 			<artifactId>spring-boot-starter-validation</artifactId> -->
<!-- 		</dependency> -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>org.springframework.boot</groupId> -->
<!-- 			<artifactId>spring-boot-starter-data-rest</artifactId> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 		    <groupId>org.springframework.boot</groupId> -->
<!-- 		    <artifactId>spring-boot-starter-mail</artifactId> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 		    <groupId>org.springframework.boot</groupId> -->
<!-- 		    <artifactId>spring-boot-starter-freemarker</artifactId> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>org.liquibase</groupId> -->
<!-- 			<artifactId>liquibase-core</artifactId> -->
<!-- 		</dependency> -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.8.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>1.9</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>io.jsonwebtoken</groupId> -->
<!-- 			<artifactId>jjwt-api</artifactId> -->
<!-- 			<version>0.11.2</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>io.jsonwebtoken</groupId> -->
<!-- 			<artifactId>jjwt-impl</artifactId> -->
<!-- 			<version>0.11.2</version> -->
<!-- 			<scope>runtime</scope> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>io.jsonwebtoken</groupId> -->
<!-- 			<artifactId>jjwt-jackson</artifactId> or jjwt-gson if Gson is preferred -->
<!-- 			<version>0.11.2</version> -->
<!-- 			<scope>runtime</scope> -->
<!-- 		</dependency> -->

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.4</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>com.googlecode.libphonenumber</groupId>
		    <artifactId>libphonenumber</artifactId>
		    <version>8.12.24</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>30.1.1-jre</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
			
		</plugins>
	</build>
	
</project>